# hello_nrf52

./: Cargo.toml
.cargo/: config
src/: main.rs
